# shellstock

./: CMakeLists.txt  Makefile  README.md
include/: getopt.h  usage.h
src/: getopt.cpp  main.cpp  usage.cpp
